assets/scss/modules/_sidebar.scss
.sidebar {
  @include breakpoint(small) {
    @include grid-column(12);
  }

  @include breakpoint(medium) {
    @include grid-column(4);
  }

  #menu-sidebar-left > li {
    border-bottom: 1px solid #86949e;
    text-align: center;
    padding-top: 1rem;
    padding-bottom: 1rem;

    >a {
      color: #86949e;
      font-size: 12px;
      font-weight: 400;
      line-height: 1.4;
      &:hover {
        text-decoration: underline;
      }
    }

    .submenu {
      position: fixed;
      right: auto;
      left: 132px;
      top: 132px;
      bottom: 0;
      border-radius: 0.5rem;

      > li {
        border-bottom: none;
        margin-top: 1.2rem;

        > a {
          color: $primary-color;

          &:hover {
            color: scale-color($primary-color, $lightness: -14%);
          }
        }
      }
    }
  }

  #menu-sidebar-left.dropdown.menu.vertical > li.opens-right > a::after {
    display: none;
  }

}

